# wi-parser

./: .gitignore  README.md  negatives.py  positives.py  pyproject.toml
dataset/negative-samples/: Baaska.csv
dataset/positive-samples/: images.csv
wi_tools/: __init__.py  loader.py  organizer.py  parser.py  sampler.py  splitter.py
